--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
         functionality.</string>
     <string name="settings">Settings</string>
     <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
